--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="zero">0dp</dimen>
     <dimen name="default_layout_padding">8dp</dimen>
     <dimen name="margin_4dp">4dp</dimen>
+    <dimen name="temp_graph_icon_size">40dp</dimen>
 </resources>
