--- a/app/src/main/res/layout/fragment_weather_searching.xml
+++ b/app/src/main/res/layout/fragment_weather_searching.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/default_layout_padding">
-
-    <com.google.android.material.appbar.MaterialToolbar
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="wrap_content">
-
-
-    </com.google.android.material.appbar.MaterialToolbar>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_weather_layout"
@@ -23,8 +16,6 @@
         app:layout_constraintHeight_percent="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-
 
         <TextView
             android:id="@+id/location_name_text_view"
@@ -93,6 +84,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_weather_layout" />
+        app:layout_constraintTop_toBottomOf="@id/main_weather_layout"
+        tools:itemCount="6"
+        tools:listitem="@layout/fragment_weather_searching_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
