--- a/app/src/main/res/layout/fragment_weather_searching_item.xml
+++ b/app/src/main/res/layout/fragment_weather_searching_item.xml
@@ -30,13 +30,24 @@
             app:layout_constraintTop_toBottomOf="@id/max_temp_text_view" />
 
         <TextView
+            android:id="@+id/searching_item_location_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            app:layout_constraintBottom_toTopOf="@id/searching_item_date_text_view"
+            app:layout_constraintEnd_toStartOf="@id/searching_item_temp_value_text_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/temp_graph_image_view"
+            tools:text="@string/searching_item_location_name_example" />
+
+        <TextView
             android:id="@+id/searching_item_temp_value_text_view"
             android:layout_width="@dimen/zero"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-            app:layout_constraintBottom_toTopOf="@id/searching_item_date_text_view"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            app:layout_constraintBaseline_toBaselineOf="@id/searching_item_location_name_text_view"
             app:layout_constraintEnd_toStartOf="@id/searching_item_barrier"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/searching_item_location_name_text_view"
             app:layout_constraintTop_toTopOf="@id/temp_graph_image_view"
             tools:text="@string/searching_item_temp_value_example" />
 
@@ -48,7 +59,7 @@
             app:layout_constraintBottom_toBottomOf="@id/temp_graph_image_view"
             app:layout_constraintEnd_toStartOf="@id/searching_item_barrier"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/searching_item_temp_value_text_view"
+            app:layout_constraintTop_toBottomOf="@id/searching_item_location_name_text_view"
             tools:text="@string/searching_item_date_example" />
 
         <TextView
