--- a/app/src/main/res/layout/fragment_weather_searching_item.xml
+++ b/app/src/main/res/layout/fragment_weather_searching_item.xml
@@ -22,15 +22,17 @@
             android:id="@+id/searching_item_optional_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="searching_item_max_temp_text_view, searching_item_min_temp_text_view, temp_graph_image_view" />
+            android:visibility="gone"
+            app:constraint_referenced_ids="searching_item_max_temp_text_view, searching_item_min_temp_text_view, temp_graph_image_view"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/searching_item_location_name_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             android:autoSizeTextType="uniform"
             android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintBottom_toTopOf="@id/searching_item_date_text_view"
             app:layout_constraintEnd_toStartOf="@id/searching_item_temp_value_text_view"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +107,7 @@
             android:background="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
