--- a/app/src/main/res/layout/fragment_weather_graph.xml
+++ b/app/src/main/res/layout/fragment_weather_graph.xml
@@ -2,28 +2,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:clickable="true"
-    android:background="@color/white"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:clickable="true"
     android:padding="@dimen/default_layout_padding">
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/weather_graph_chart_view"
         android:layout_width="@dimen/zero"
         android:layout_height="@dimen/zero"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/weather_graph_progress_bar"
-        android:layout_width="wrap_content"
+    <com.google.android.material.slider.RangeSlider
+        android:id="@+id/weather_graph_range_slider"
+        android:layout_width="@dimen/zero"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/weather_graph_chart_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
