--- a/app/src/main/res/menu/app_bar_menu.xml
+++ b/app/src/main/res/menu/app_bar_menu.xml
@@ -7,11 +7,11 @@
         android:icon="@drawable/ic_search"
         android:title="@string/menu_title_search_by_name"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView" />
+        app:showAsAction="always|collapseActionView" />
 
     <item
         android:id="@+id/action_search_weather_by_coords"
         android:icon="@drawable/ic_my_location"
         android:title="@string/menu_title_search_by_coords"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
