--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="default_layout_padding">8dp</dimen>
     <dimen name="margin_4dp">4dp</dimen>
     <dimen name="temp_graph_icon_size">40dp</dimen>
+    <dimen name="graph_filter_hint_text_size">11sp</dimen>
 </resources>
