--- a/app/src/main/res/layout/fragment_weather_searching.xml
+++ b/app/src/main/res/layout/fragment_weather_searching.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/default_layout_padding">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_weather_layout"
@@ -92,6 +91,7 @@
         android:id="@+id/weather_history_recycler_view"
         android:layout_width="@dimen/zero"
         android:layout_height="@dimen/zero"
+        android:layout_marginVertical="@dimen/default_layout_padding"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,5 +99,4 @@
         app:layout_constraintTop_toBottomOf="@id/main_weather_layout"
         tools:itemCount="6"
         tools:listitem="@layout/fragment_weather_searching_item" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
