--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="low_temperature">#4FC3F7</color>
     <color name="medium_temperature">#FFB74D</color>
     <color name="high_temperature">#E57373</color>
-    <color name="positive_button">#4CAF50</color>
-    <color name="negative_button">#F44336</color>
+    <color name="positive_button">#43A047</color>
+    <color name="negative_button">#E53935</color>
 </resources>
