--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="margin_4dp">4dp</dimen>
     <dimen name="temp_graph_icon_size">40dp</dimen>
     <dimen name="graph_filter_hint_text_size">11sp</dimen>
+    <dimen name="alert_dialog_button_text_size">16sp</dimen>
 </resources>
