--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,15 +8,13 @@
 
     <style name="alertButtonPositive" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textAllCaps">true</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/alert_dialog_button_text_size</item>
         <item name="android:textColor">@color/positive_button</item>
     </style>
 
     <style name="alertButtonNegative" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">@color/negative_button</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/alert_dialog_button_text_size</item>
     </style>
 </resources>
