--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -17,4 +17,9 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/alert_dialog_button_text_size</item>
     </style>
+
+    <style name="appMaterialSwitch" parent="Widget.MaterialComponents.CompoundButton.Switch">
+        <item name="android:thumb">@drawable/switch_thumb</item>
+        <item name="track">@drawable/switch_track</item>
+    </style>
 </resources>
