--- a/app/src/main/res/layout-land/fragment_weather_graph.xml
+++ b/app/src/main/res/layout-land/fragment_weather_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/app_background"
     android:clickable="true"
     android:padding="@dimen/default_layout_padding">
 
@@ -29,11 +29,11 @@
         android:id="@+id/filter_data_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_4dp"
         android:gravity="center"
         android:textSize="@dimen/graph_filter_hint_text_size"
         app:layout_constraintBottom_toBottomOf="@id/weather_graph_chart_view"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="@dimen/margin_4dp"
         app:layout_constraintStart_toEndOf="@id/weather_graph_chart_view"
         app:layout_constraintTop_toTopOf="@id/weather_graph_chart_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
