--- a/app/src/main/res/layout/fragment_weather_graph.xml
+++ b/app/src/main/res/layout/fragment_weather_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/app_background"
     android:clickable="true"
     android:padding="@dimen/default_layout_padding">
 
@@ -31,9 +31,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="@dimen/graph_filter_hint_text_size"
-        app:layout_constraintVertical_bias="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/weather_graph_range_slider" />
+        app:layout_constraintTop_toBottomOf="@id/weather_graph_range_slider"
+        app:layout_constraintVertical_bias="0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
