--- a/app/src/main/res/layout/fragment_weather_graph.xml
+++ b/app/src/main/res/layout/fragment_weather_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_background"
@@ -30,10 +31,12 @@
         android:layout_width="@dimen/zero"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="@color/white_90"
         android:textSize="@dimen/graph_filter_hint_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/weather_graph_range_slider"
-        app:layout_constraintVertical_bias="0" />
+        app:layout_constraintVertical_bias="0"
+        tools:text="lorem" />
 </androidx.constraintlayout.widget.ConstraintLayout>
